[package]
name = "textdb"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
nom = "5"
prettytable-rs = "*"
ctrlc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "*"
anyhow = "*"
gluesql = "0.2"
sqlparser = "*"
sql-builder = "*"
chrono = "*"
tokio = { version = "*", features = ["sync", "rt-core", "macros"] }
log = "0.4.0"
env_logger = "0.7.1"

regex = "1"
