[package]
name = "textdb"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
nom = "5"
prettytable-rs = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "*"
anyhow = "*"
sqlparser = "*"
sql-builder = "*"
chrono = "*"
tokio = { version = "*", features = ["sync", "rt-core", "macros"] }
log = "0.4.0"
env_logger = "0.7.1"
async-trait = "*"
im = "15.0.0"
format-sql-query = "0.4.0"
regex = "1"
futures-await-test = "*"
itertools = "*"
tera = "*"
futures = "*"
async-recursion = "*"

[dependencies.gluesql_core]
version = "0.4.2"
package = "gluesql"
default-features = false
features = ["alter-table"]
