[package]
name = "kaeshi"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
nom = "5"
prettytable-rs = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
anyhow = "*"
sqlparser = "*"
sql-builder = "*"
chrono = "*"
tokio = { version = "*", features = ["sync", "rt-core", "macros"] }
log = "0.4.0"
env_logger = "0.7.1"
async-trait = "*"
regex = "1"
futures-await-test = "*"
tera = "*"
futures = "*"
async-recursion = "*"
im = "15.0.0"
clap = "*"


[dependencies.gluesql]
version = "0.8"
package = "gluesql"
default-features = false
features = ["sorter"]
